--- a/index.html
+++ b/index.html
@@ -1,5 +1,70 @@
 ---
-layout: home
-# articles:
-#   excerpt_type: html
+layout: article
+title: 首页 - YanZu's Blog
 ---
+
+## 摘句
+<font color=B6B196 size=5 face="Times New Roman"><strong>I feel so out of line</strong></font>
+
+<font size=4><strong>我觉得很失控</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>Every time that you call my name</strong></font>
+
+<font size=4><strong>每当你叫我的名字时</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>I want to make a move</strong></font>
+
+<font size=4><strong>我想立刻回应</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>But I'm scared to say</strong></font>
+
+<font size=4><strong>但是我却又害怕说出口</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>It's taken a while to get this far</strong></font>
+
+<font size=4><strong>这需要一段时间</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>I'm caught and away</strong></font>
+
+<font size=4><strong>我仿佛在困境中</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>It's taken a ride to get this far</strong></font>
+
+<font size=4><strong>而且越来越艰难</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>We're one and the same</strong></font>
+
+<font size=4><strong>我们都是一样的</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>Chasing colours after dark</strong></font>
+
+<font size=4><strong>在黑暗后追逐光鲜</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>In your heart, I believe in you</strong></font>
+
+<font size=4><strong>在你的心里，我相信你</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>The way you pull me in</strong></font>
+
+<font size=4><strong>你鼓励我的方式</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>Can't pretend we're a look apart</strong></font>
+
+<font size=4><strong>我们不用假装是分开的</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>After dark, in your heart</strong></font>
+
+<font size=4><strong>黑暗之后，在你的心中</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>I believe in you</strong></font>
+
+<font size=4><strong>我相信你</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>The way you pull me in</strong></font>
+
+<font size=4><strong>你鼓励我的方式</strong></font>
+
+<font color=B6B196 size=5 face="Times New Roman"><strong>Can't pretend I'll be chasing colours</strong></font>
+
+<font size=4><strong>不用假装，我将追逐光鲜</strong></font>
+
