--- a/postlists.html
+++ b/postlists.html
@@ -1,3 +1,9 @@
 ---
-layout: home
+layout: articles
+title: 文章列表
+articles:
+  show_cover: false
+  show_excerpt: true
+  show_readmore: true
+  show_info: true
 ---
