--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: article
-title: 首页 - YanZu's Blog
+title: YanZu
 ---
-
-<h2>摘句</h2>
 <p></p>
 <font color=B6B196 size=5 face="Times New Roman"><strong>I feel so out of line</strong></font>
 <p></p>
