--- a/postlists.html
+++ b/postlists.html
@@ -1,8 +1,8 @@
 ---
 layout: articles
-title: Articles - Item (Excerpt + Read More + Info)
+title: 文章列表
 articles:
-  data_source: _posts
+  data_source: site.posts
   show_cover: false
   show_excerpt: true
   show_readmore: true
