--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: YanZu
+comment: false
 ---
 <p></p>
 <font size=5 color=#b6b196 face="Times New Roman"><strong>I feel so out of line</strong></font>
