--- a/index.html
+++ b/index.html
@@ -4,133 +4,196 @@ title: YanZu
 comment: false
 ---
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I feel so out of line</strong></font>
+<font size=5 color=#b6b196><strong>雨上がりの虹も</strong></font>
 <p></p>
-<font size=5><strong>我觉得很失控</strong></font>
+<font size=5><strong>雨过天晴的彩虹</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Every time that you call my name</strong></font>
+<font size=5 color=#b6b196><strong>凛と咲いた花も</strong></font>
 <p></p>
-<font size=5><strong>每当你叫我的名字时</strong></font>
+<font size=5><strong>凛然绽放的花朵</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I want to make a move</strong></font>
+<font size=5 color=#b6b196><strong>色づき溢れ出す</strong></font>
 <p></p>
-<font size=5><strong>我想立刻回应</strong></font>
+<font size=5><strong>色彩随之满溢缤纷</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>But I'm scared to say</strong></font>
+<font size=5 color=#b6b196><strong>茜色の空 仰ぐ君に</strong></font>
 <p></p>
-<font size=5><strong>但我很害怕说</strong></font>
+<font size=5><strong>望着那个仰望绯红色天空的你</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>It's taken a while to get this far</strong></font>
+<font size=5 color=#b6b196><strong>あの日 恋に落ちた</strong></font>
 <p></p>
-<font size=5><strong>这需要一段时间</strong></font>
+<font size=5><strong>就在那天 我坠入了爱河</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I'm caught and away</strong></font>
+<font size=5 color=#b6b196><strong>瞬間のドラマチック</strong></font>
 <p></p>
-<font size=5><strong>我仿佛在困境中</strong></font>
+<font size=5><strong>戏剧化的那一瞬间</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>It's taken a ride to get this far</strong></font>
+<font size=5 color=#b6b196><strong>フィルムの中の1コマも</strong></font>
 <p></p>
-<font size=5><strong>而且越来越艰难</strong></font>
+<font size=5><strong>如荧幕中的特写镜头</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>We're one and the same</strong></font>
+<font size=5 color=#b6b196><strong>消えないよ 心に刻むから</strong></font>
 <p></p>
-<font size=5><strong>我们都是一样的</strong></font>
+<font size=5><strong>早已深深铭刻在我心中 永远不会消失</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Chasing colours after dark</strong></font>
+<font size=5 color=#b6b196><strong>君だよ 君なんだよ 教えてくれた</strong></font>
 <p></p>
-<font size=5><strong>在黑暗后追逐光鲜</strong></font>
+<font size=5><strong>是你 是你 告诉我</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>In your heart, I believe in you</strong></font>
+<font size=5 color=#b6b196><strong>暗闇も光るなら</strong></font>
 <p></p>
-<font size=5><strong>在你的心里，我相信你</strong></font>
+<font size=5><strong>若能在黑暗中绽放光芒</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>The way you pull me in</strong></font>
-<p></p>
-<font size=5><strong>你鼓励我的方式</strong></font>
-<p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Can't pretend we're a look apart</strong></font>
-<p></p>
-<font size=5><strong>我们不用假装是分开的</strong></font>
-<p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>After dark, in your heart</strong></font>
-<p></p>
-<font size=5><strong>在黑暗之后，在你的心中</strong></font>
-<p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I believe in you</strong></font>
-<p></p>
-<font size=5><strong>我相信你</strong></font>
-<p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>The way you pull me in</strong></font>
-<p></p>
-<font size=5><strong>你鼓励我的方式</strong></font>
-<p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Can't pretend, I'll be chasing colours</strong></font>
-<p></p>
-<font size=5><strong>不用假装，我将追逐光鲜</strong></font>
-<p></p>
+<font size=5 color=#b6b196><strong>星空になる</strong></font>
 
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I feel so beautiful when you call</strong></font>
+<font size=5><strong>便能化作星空</strong></font>
 <p></p>
-<font size=5><strong>当你给我打电话时，我感觉如此美丽</strong></font>
+<font size=5 color=#b6b196><strong>悲しみを笑顔に</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Tell me we won't change</strong></font>
+<font size=5><strong>悲伤化作笑颜</strong></font>
 <p></p>
-<font size=5><strong>你告诉我，我们不会改变</strong></font>
+<font size=5 color=#b6b196><strong>もう隠さないで</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I want to make a move</strong></font>
+<font size=5><strong>已经无需隐藏</strong></font>
 <p></p>
-<font size=5><strong>我想立刻回应</strong></font>
+<font size=5 color=#b6b196><strong>煌めくどんな星も</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>But I'm scared to say</strong></font>
+<font size=5><strong>漫天闪耀着的星光</strong></font>
 <p></p>
-<font size=5><strong>但我很害怕说</strong></font>
+<font size=5 color=#b6b196><strong>君を照らすから</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I feel so out of line</strong></font>
+<font size=5><strong>都会为你照亮前行</strong></font>
 <p></p>
-<font size=5><strong>这需要一段时间</strong></font>
+<font size=5 color=#b6b196><strong>眠りも忘れて 迎えた朝日が</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I'm caught and away</strong></font>
+<font size=5><strong>一夜未眠迎来的朝阳</strong></font>
 <p></p>
-<font size=5><strong>我仿佛在困境中</strong></font>
+<font size=5 color=#b6b196><strong>やたらと突き刺さる</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>It's taken a ride to get this far</strong></font>
+<font size=5><strong>却愈加刺痛我心</strong></font>
 <p></p>
-<font size=5><strong>而且越来越艰难</strong></font>
+<font size=5 color=#b6b196><strong>低気圧運ぶ 頭痛だって</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>We're one and the same</strong></font>
+<font size=5><strong>令人烦闷的头痛</strong></font>
 <p></p>
-<font size=5><strong>我们都是一样的</strong></font>
+<font size=5 color=#b6b196><strong>忘れる 君に会えば</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Chasing colours after dark</strong></font>
+<font size=5><strong>只要见到你 便能瞬间遗忘</strong></font>
 <p></p>
-<font size=5><strong>在黑暗后追逐光鲜</strong></font>
+<font size=5 color=#b6b196><strong>静寂はロマンティック</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>In your heart, I believe in you</strong></font>
+<font size=5><strong>静寂编制你我的罗曼史</strong></font>
 <p></p>
-<font size=5><strong>在你的心里，我相信你</strong></font>
+<font size=5 color=#b6b196><strong>紅茶に溶けたシュガーのように</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>The way you pull me in</strong></font>
+<font size=5><strong>如红茶里融化的砂糖</strong></font>
 <p></p>
-<font size=5><strong>你鼓励我的方式</strong></font>
+<font size=5 color=#b6b196><strong>全身に巡るよ 君の声</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Can't pretend we're a look apart</strong></font>
+<font size=5><strong>你的声音萦绕全身</strong></font>
 <p></p>
-<font size=5><strong>我们不用假装是分开的</strong></font>
+<font size=5 color=#b6b196><strong>君だよ 君なんだよ</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>After dark, in your heart</strong></font>
+<font size=5><strong>是你 是你</strong></font>
 <p></p>
-<font size=5><strong>在黑暗之后，在你的心中</strong></font>
+<font size=5 color=#b6b196><strong>笑顔をくれた</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>I believe in you</strong></font>
+<font size=5><strong>带给我笑容</strong></font>
 <p></p>
-<font size=5><strong>我相信你</strong></font>
+<font size=5 color=#b6b196><strong>涙も光るなら</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>The way you pull me in</strong></font>
+<font size=5><strong>泪滴若能绽放光芒</strong></font>
 <p></p>
-<font size=5><strong>你鼓励我的方式</strong></font>
+<font size=5 color=#b6b196><strong>流星になる</strong></font>
 <p></p>
-<font size=5 color=#b6b196 face="Times New Roman"><strong>Can't pretend, I'll be chasing colours</strong></font>
+<font size=5><strong>便能化作流星</strong></font>
 <p></p>
-<font size=5><strong>不用假装，我将追逐光鲜</strong></font>
+<font size=5 color=#b6b196><strong>傷付いたその手を</strong></font>
+<p></p>
+<font size=5><strong>这伤痕累累的双手</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>もう離さないで</strong></font>
+<p></p>
+<font size=5><strong>请别再松开</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>願いを込めた空に</strong></font>
+<p></p>
+<font size=5><strong>寄托心愿的天空</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>明日が来るから</strong></font>
+<p></p>
+<font size=5><strong>明天一定会来到</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>導いてくれた 光は 君だよ</strong></font>
+<p></p>
+<font size=5><strong>指引着我前进的光芒 就是你啊</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>つられて僕も 走り出した</strong></font>
+<p></p>
+<font size=5><strong>我也不禁迈步奔向前方</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>知らぬ間に クロスし始めた</strong></font>
+<p></p>
+<font size=5><strong>不知不觉间 我们交织在一起</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>ほら 今だ ここで 光るなら</strong></font>
+<p></p>
+<font size=5><strong>看 就是现在 若此处有光芒</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>君だよ 君なんだよ 教えてくれた</strong></font>
+<p></p>
+<font size=5><strong>是你 是你 告诉我</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>暗闇は終わるから</strong></font>
+<p></p>
+<font size=5><strong>黑暗终究会过去</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>君だよ 君なんだよ 教えてくれた</strong></font>
+<p></p>
+<font size=5><strong>是你 是你 告诉我</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>暗闇も光るなら</strong></font>
+<p></p>
+<font size=5><strong>若能在黑暗中绽放光芒</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>星空になる</strong></font>
+<p></p>
+<font size=5><strong>便能化作星空</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>悲しみを笑顔に</strong></font>
+<p></p>
+<font size=5><strong>悲伤化作笑颜</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>もう隠さないで</strong></font>
+<p></p>
+<font size=5><strong>已经无需隐藏</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>煌めくどんな星も</strong></font>
+<p></p>
+<font size=5><strong>漫天闪耀着的星光</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>君を照らすから</strong></font>
+<p></p>
+<font size=5><strong>都会为你照亮前行</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>答えはいつでも偶然？必然？</strong></font>
+<p></p>
+<font size=5><strong>答案是 偶然？必然？</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>いつか選んだ道こそ</strong></font>
+<p></p>
+<font size=5><strong>你曾经选择的路</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>運命になる</strong></font>
+<p></p>
+<font size=5><strong>才是真正的命运</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>握りしめた その希望も不安も</strong></font>
+<p></p>
+<font size=5><strong>紧握在手心的希望也好 不安也罢</strong></font>
+<p></p>
+<font size=5 color=#b6b196><strong>きっと2人を動かす 光になるから</strong></font>
+<p></p>
+<font size=5><strong>必定会化作驱使我们前进的光芒</strong></font>
 <p></p>
