--- a/index.html
+++ b/index.html
@@ -3,197 +3,219 @@ layout: article
 title: YanZu
 comment: false
 ---
+<font size=6 color=#b6b196 face=Bahnschrift><strong>I lost myself into the night</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>雨上がりの虹も</strong></font>
+<font size=5><strong>在黑夜之中迷失自己</font></strong>
 <p></p>
-<font size=5><strong>雨过天晴的彩虹</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>And I flew higher</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>凛と咲いた花も</strong></font>
+<font size=5><strong>于是我飞得更高</font></strong>
 <p></p>
-<font size=5><strong>凛然绽放的花朵</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Than I had ever</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>色づき溢れ出す</strong></font>
+<font size=5><strong>比曾经任何一次都高</font></strong>
 <p></p>
-<font size=5><strong>色彩随之满溢缤纷</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>But I still felt small</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>茜色の空 仰ぐ君に</strong></font>
+<font size=5><strong>但我依然感觉我微不足道</font></strong>
 <p></p>
-<font size=5><strong>望着那个仰望绯红色天空的你</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>I clipped my wings and fell from flight</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>あの日 恋に落ちた</strong></font>
+<font size=5><strong>我撕裂我的翅膀，从空中坠落</font></strong>
 <p></p>
-<font size=5><strong>就在那天 我坠入了爱河</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>To open water</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>瞬間のドラマチック</strong></font>
+<font size=5><strong>沉入水中</font></strong>
 <p></p>
-<font size=5><strong>戏剧化的那一瞬间</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>And floated farther</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>フィルムの中の1コマも</strong></font>
+<font size=5><strong>随波逐流</font></strong>
 <p></p>
-<font size=5><strong>如荧幕中的特写镜头</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Away from myself</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>消えないよ 心に刻むから</strong></font>
+<font size=5><strong>远离自我</font></strong>
 <p></p>
-<font size=5><strong>早已深深铭刻在我心中 永远不会消失</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>And I swam in the wakes of imposters</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>君だよ 君なんだよ 教えてくれた</strong></font>
+<font size=5><strong>我在谎言编织的湖中前行</font></strong>
 <p></p>
-<font size=5><strong>是你 是你 告诉我</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Just to feel what it's like to pretend</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>暗闇も光るなら</strong></font>
+<font size=5><strong>只为体验伪装的感觉</font></strong>
 <p></p>
-<font size=5><strong>若能在黑暗中绽放光芒</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>There's no dreams in the lakes only monsters</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>星空になる</strong></font>
-
+<font size=5><strong>湖中没有美梦，只有魔鬼</font></strong>
 <p></p>
-<font size=5><strong>便能化作星空</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>And the monsters are my only friends</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>悲しみを笑顔に</strong></font>
+<font size=5><strong>而这些魔鬼是我唯一的朋友</font></strong>
 <p></p>
-<font size=5><strong>悲伤化作笑颜</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>They're all that I was</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>もう隠さないで</strong></font>
+<font size=5><strong>他们都是我的映像</font></strong>
 <p></p>
-<font size=5><strong>已经无需隐藏</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>And ever could be</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>煌めくどんな星も</strong></font>
+<font size=5><strong>而我也可能会成为恶魔.....</font></strong>
 <p></p>
-<font size=5><strong>漫天闪耀着的星光</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Eyes in the dead still water</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>君を照らすから</strong></font>
+<font size=5><strong>亡魂之眼，仍在流泪</font></strong>
 <p></p>
-<font size=5><strong>都会为你照亮前行</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Tried but it pushed back harder</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>眠りも忘れて 迎えた朝日が</strong></font>
+<font size=5><strong>竭尽全力，却适得其反</font></strong>
 <p></p>
-<font size=5><strong>一夜未眠迎来的朝阳</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>やたらと突き刺さる</strong></font>
+<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=5><strong>却愈加刺痛我心</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>低気圧運ぶ 頭痛だって</strong></font>
+<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=5><strong>令人烦闷的头痛</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Knives in the backs of martyrs</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>忘れる 君に会えば</strong></font>
+<font size=5><strong>刺穿殉道者的利刃</font></strong>
 <p></p>
-<font size=5><strong>只要见到你 便能瞬间遗忘</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Lives in the burning fodder</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>静寂はロマンティック</strong></font>
+<font size=5><strong>活在烈焰的地狱中</font></strong>
 <p></p>
-<font size=5><strong>静寂编制你我的罗曼史</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>紅茶に溶けたシュガーのように</strong></font>
+<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=5><strong>如红茶里融化的砂糖</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>全身に巡るよ 君の声</strong></font>
+<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=5><strong>你的声音萦绕全身</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>You found me drifted out to sea</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>君だよ 君なんだよ</strong></font>
+<font size=5><strong>你发现漂浮在海上的我</font></strong>
 <p></p>
-<font size=5><strong>是你 是你</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>It's automatic</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>笑顔をくれた</strong></font>
+<font size=5><strong>这必然发生</font></strong>
 <p></p>
-<font size=5><strong>带给我笑容</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>It's telepathic</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>涙も光るなら</strong></font>
+<font size=5><strong>这是心灵感应</font></strong>
 <p></p>
-<font size=5><strong>泪滴若能绽放光芒</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>You always knew me</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>流星になる</strong></font>
+<font size=5><strong>你总是那么了解我</font></strong>
 <p></p>
-<font size=5><strong>便能化作流星</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>And you laugh as I search for a harbor</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>傷付いたその手を</strong></font>
+<font size=5><strong>你嘲笑着我寻求港湾</font></strong>
 <p></p>
-<font size=5><strong>这伤痕累累的双手</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>As you point where the halo had been</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>もう離さないで</strong></font>
+<font size=5><strong>当你指出光环的轨迹</font></strong>
 <p></p>
-<font size=5><strong>请别再松开</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>But the light in your eyes has been squandered</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>願いを込めた空に</strong></font>
+<font size=5><strong>但你眼中的光芒也黯淡了下来</font></strong>
 <p></p>
-<font size=5><strong>寄托心愿的天空</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>There's no angel in you in the end</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>明日が来るから</strong></font>
+<font size=5><strong>到最后，你的善意也化作虚无</font></strong>
 <p></p>
-<font size=5><strong>明天一定会来到</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>And all that I was</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>導いてくれた 光は 君だよ</strong></font>
+<font size=5><strong>我所拥有的一切</font></strong>
 <p></p>
-<font size=5><strong>指引着我前进的光芒 就是你啊</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>I left behind me</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>つられて僕も 走り出した</strong></font>
+<font size=5><strong>都抛弃在身后</font></strong>
 <p></p>
-<font size=5><strong>我也不禁迈步奔向前方</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Eyes in the dead still water</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>知らぬ間に クロスし始めた</strong></font>
+<font size=5><strong>亡魂之眼，仍在流泪</font></strong>
 <p></p>
-<font size=5><strong>不知不觉间 我们交织在一起</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Tried but it pushed back harder</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>ほら 今だ ここで 光るなら</strong></font>
+<font size=5><strong>竭尽全力，却适得其反</font></strong>
 <p></p>
-<font size=5><strong>看 就是现在 若此处有光芒</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>君だよ 君なんだよ 教えてくれた</strong></font>
+<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=5><strong>是你 是你 告诉我</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>暗闇は終わるから</strong></font>
+<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=5><strong>黑暗终究会过去</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Knives in the backs of martyrs</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>君だよ 君なんだよ 教えてくれた</strong></font>
+<font size=5><strong>刺穿殉道者的利刃</font></strong>
 <p></p>
-<font size=5><strong>是你 是你 告诉我</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Lives in the burning fodder</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>暗闇も光るなら</strong></font>
+<font size=5><strong>活在烈焰的地狱中</font></strong>
 <p></p>
-<font size=5><strong>若能在黑暗中绽放光芒</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>星空になる</strong></font>
+<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=5><strong>便能化作星空</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>悲しみを笑顔に</strong></font>
+<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=5><strong>悲伤化作笑颜</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Now I wait</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>もう隠さないで</strong></font>
+<font size=5><strong>我等待着</font></strong>
 <p></p>
-<font size=5><strong>已经无需隐藏</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>This metamorphosis</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>煌めくどんな星も</strong></font>
+<font size=5><strong>转变......</font></strong>
 <p></p>
-<font size=5><strong>漫天闪耀着的星光</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>All that is left is the change</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>君を照らすから</strong></font>
+<font size=5><strong>把所有希望押在转变上</font></strong>
 <p></p>
-<font size=5><strong>都会为你照亮前行</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Selfish fate</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>答えはいつでも偶然？必然？</strong></font>
+<font size=5><strong>自私的命运啊</font></strong>
 <p></p>
-<font size=5><strong>答案是 偶然？必然？</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>I think you made me this</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>いつか選んだ道こそ</strong></font>
+<font size=5><strong>我认为你让我变成这样的</font></strong>
 <p></p>
-<font size=5><strong>你曾经选择的路</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Under the water I wait</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>運命になる</strong></font>
+<font size=5><strong>坠入深海，我仍在等待</font></strong>
 <p></p>
-<font size=5><strong>才是真正的命运</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Eyes in the dead still water</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>握りしめた その希望も不安も</strong></font>
+<font size=5><strong>亡魂之眼，仍在流泪</font></strong>
 <p></p>
-<font size=5><strong>紧握在手心的希望也好 不安也罢</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Tried but it pushed back harder</font></strong>
 <p></p>
-<font size=5 color=#b6b196><strong>きっと2人を動かす 光になるから</strong></font>
+<font size=5><strong>竭尽全力，却适得其反</font></strong>
 <p></p>
-<font size=5><strong>必定会化作驱使我们前进的光芒</strong></font>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<p></p>
+<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
+<p></p>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<p></p>
+<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
+<p></p>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Knives in the backs of martyrs</font></strong>
+<p></p>
+<font size=5><strong>刺穿殉道者的利刃</font></strong>
+<p></p>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Lives in the burning fodder</font></strong>
+<p></p>
+<font size=5><strong>活在烈焰的地狱中</font></strong>
+<p></p>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<p></p>
+<font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
+<p></p>
+<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<p></p>
+<font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
