--- a/index.html
+++ b/index.html
@@ -3,219 +3,219 @@ layout: article
 title: YanZu
 comment: false
 ---
-<font size=6 color=#b6b196 face=Bahnschrift><strong>I lost myself into the night</font></strong>
+<font size=5 color=#b6b196><strong>I lost myself into the night</font></strong>
 <p></p>
 <font size=5><strong>在黑夜之中迷失自己</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>And I flew higher</font></strong>
+<font size=5 color=#b6b196><strong>And I flew higher</font></strong>
 <p></p>
 <font size=5><strong>于是我飞得更高</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Than I had ever</font></strong>
+<font size=5 color=#b6b196><strong>Than I had ever</font></strong>
 <p></p>
 <font size=5><strong>比曾经任何一次都高</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>But I still felt small</font></strong>
+<font size=5 color=#b6b196><strong>But I still felt small</font></strong>
 <p></p>
 <font size=5><strong>但我依然感觉我微不足道</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>I clipped my wings and fell from flight</font></strong>
+<font size=5 color=#b6b196><strong>I clipped my wings and fell from flight</font></strong>
 <p></p>
 <font size=5><strong>我撕裂我的翅膀，从空中坠落</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>To open water</font></strong>
+<font size=5 color=#b6b196><strong>To open water</font></strong>
 <p></p>
 <font size=5><strong>沉入水中</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>And floated farther</font></strong>
+<font size=5 color=#b6b196><strong>And floated farther</font></strong>
 <p></p>
 <font size=5><strong>随波逐流</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Away from myself</font></strong>
+<font size=5 color=#b6b196><strong>Away from myself</font></strong>
 <p></p>
 <font size=5><strong>远离自我</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>And I swam in the wakes of imposters</font></strong>
+<font size=5 color=#b6b196><strong>And I swam in the wakes of imposters</font></strong>
 <p></p>
 <font size=5><strong>我在谎言编织的湖中前行</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Just to feel what it's like to pretend</font></strong>
+<font size=5 color=#b6b196><strong>Just to feel what it's like to pretend</font></strong>
 <p></p>
 <font size=5><strong>只为体验伪装的感觉</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>There's no dreams in the lakes only monsters</font></strong>
+<font size=5 color=#b6b196><strong>There's no dreams in the lakes only monsters</font></strong>
 <p></p>
 <font size=5><strong>湖中没有美梦，只有魔鬼</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>And the monsters are my only friends</font></strong>
+<font size=5 color=#b6b196><strong>And the monsters are my only friends</font></strong>
 <p></p>
 <font size=5><strong>而这些魔鬼是我唯一的朋友</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>They're all that I was</font></strong>
+<font size=5 color=#b6b196><strong>They're all that I was</font></strong>
 <p></p>
 <font size=5><strong>他们都是我的映像</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>And ever could be</font></strong>
+<font size=5 color=#b6b196><strong>And ever could be</font></strong>
 <p></p>
 <font size=5><strong>而我也可能会成为恶魔.....</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Eyes in the dead still water</font></strong>
+<font size=5 color=#b6b196><strong>Eyes in the dead still water</font></strong>
 <p></p>
 <font size=5><strong>亡魂之眼，仍在流泪</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Tried but it pushed back harder</font></strong>
+<font size=5 color=#b6b196><strong>Tried but it pushed back harder</font></strong>
 <p></p>
 <font size=5><strong>竭尽全力，却适得其反</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
 <p></p>
 <font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
 <p></p>
 <font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Knives in the backs of martyrs</font></strong>
+<font size=5 color=#b6b196><strong>Knives in the backs of martyrs</font></strong>
 <p></p>
 <font size=5><strong>刺穿殉道者的利刃</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Lives in the burning fodder</font></strong>
+<font size=5 color=#b6b196><strong>Lives in the burning fodder</font></strong>
 <p></p>
 <font size=5><strong>活在烈焰的地狱中</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
 <p></p>
 <font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
 <p></p>
 <font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>You found me drifted out to sea</font></strong>
+<font size=5 color=#b6b196><strong>You found me drifted out to sea</font></strong>
 <p></p>
 <font size=5><strong>你发现漂浮在海上的我</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>It's automatic</font></strong>
+<font size=5 color=#b6b196><strong>It's automatic</font></strong>
 <p></p>
 <font size=5><strong>这必然发生</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>It's telepathic</font></strong>
+<font size=5 color=#b6b196><strong>It's telepathic</font></strong>
 <p></p>
 <font size=5><strong>这是心灵感应</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>You always knew me</font></strong>
+<font size=5 color=#b6b196><strong>You always knew me</font></strong>
 <p></p>
 <font size=5><strong>你总是那么了解我</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>And you laugh as I search for a harbor</font></strong>
+<font size=5 color=#b6b196><strong>And you laugh as I search for a harbor</font></strong>
 <p></p>
 <font size=5><strong>你嘲笑着我寻求港湾</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>As you point where the halo had been</font></strong>
+<font size=5 color=#b6b196><strong>As you point where the halo had been</font></strong>
 <p></p>
 <font size=5><strong>当你指出光环的轨迹</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>But the light in your eyes has been squandered</font></strong>
+<font size=5 color=#b6b196><strong>But the light in your eyes has been squandered</font></strong>
 <p></p>
 <font size=5><strong>但你眼中的光芒也黯淡了下来</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>There's no angel in you in the end</font></strong>
+<font size=5 color=#b6b196><strong>There's no angel in you in the end</font></strong>
 <p></p>
 <font size=5><strong>到最后，你的善意也化作虚无</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>And all that I was</font></strong>
+<font size=5 color=#b6b196><strong>And all that I was</font></strong>
 <p></p>
 <font size=5><strong>我所拥有的一切</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>I left behind me</font></strong>
+<font size=5 color=#b6b196><strong>I left behind me</font></strong>
 <p></p>
 <font size=5><strong>都抛弃在身后</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Eyes in the dead still water</font></strong>
+<font size=5 color=#b6b196><strong>Eyes in the dead still water</font></strong>
 <p></p>
 <font size=5><strong>亡魂之眼，仍在流泪</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Tried but it pushed back harder</font></strong>
+<font size=5 color=#b6b196><strong>Tried but it pushed back harder</font></strong>
 <p></p>
 <font size=5><strong>竭尽全力，却适得其反</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
 <p></p>
 <font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
 <p></p>
 <font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Knives in the backs of martyrs</font></strong>
+<font size=5 color=#b6b196><strong>Knives in the backs of martyrs</font></strong>
 <p></p>
 <font size=5><strong>刺穿殉道者的利刃</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Lives in the burning fodder</font></strong>
+<font size=5 color=#b6b196><strong>Lives in the burning fodder</font></strong>
 <p></p>
 <font size=5><strong>活在烈焰的地狱中</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
 <p></p>
 <font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
 <p></p>
 <font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Now I wait</font></strong>
+<font size=5 color=#b6b196><strong>Now I wait</font></strong>
 <p></p>
 <font size=5><strong>我等待着</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>This metamorphosis</font></strong>
+<font size=5 color=#b6b196><strong>This metamorphosis</font></strong>
 <p></p>
 <font size=5><strong>转变......</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>All that is left is the change</font></strong>
+<font size=5 color=#b6b196><strong>All that is left is the change</font></strong>
 <p></p>
 <font size=5><strong>把所有希望押在转变上</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Selfish fate</font></strong>
+<font size=5 color=#b6b196><strong>Selfish fate</font></strong>
 <p></p>
 <font size=5><strong>自私的命运啊</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>I think you made me this</font></strong>
+<font size=5 color=#b6b196><strong>I think you made me this</font></strong>
 <p></p>
 <font size=5><strong>我认为你让我变成这样的</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Under the water I wait</font></strong>
+<font size=5 color=#b6b196><strong>Under the water I wait</font></strong>
 <p></p>
 <font size=5><strong>坠入深海，我仍在等待</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Eyes in the dead still water</font></strong>
+<font size=5 color=#b6b196><strong>Eyes in the dead still water</font></strong>
 <p></p>
 <font size=5><strong>亡魂之眼，仍在流泪</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Tried but it pushed back harder</font></strong>
+<font size=5 color=#b6b196><strong>Tried but it pushed back harder</font></strong>
 <p></p>
 <font size=5><strong>竭尽全力，却适得其反</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
 <p></p>
 <font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
 <p></p>
 <font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Knives in the backs of martyrs</font></strong>
+<font size=5 color=#b6b196><strong>Knives in the backs of martyrs</font></strong>
 <p></p>
 <font size=5><strong>刺穿殉道者的利刃</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Lives in the burning fodder</font></strong>
+<font size=5 color=#b6b196><strong>Lives in the burning fodder</font></strong>
 <p></p>
 <font size=5><strong>活在烈焰的地狱中</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>Cauterized and atrophied</font></strong>
+<font size=5 color=#b6b196><strong>Cauterized and atrophied</font></strong>
 <p></p>
 <font size=5><strong>燃烧殆尽，灵魂将逝</font></strong>
 <p></p>
-<font size=6 color=#b6b196 face=Bahnschrift><strong>This is my unbecoming</font></strong>
+<font size=5 color=#b6b196><strong>This is my unbecoming</font></strong>
 <p></p>
 <font size=5><strong>光鲜的外表下藏着丑恶的魔鬼</font></strong>
 <p></p>
