--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: article
-title: YanZu
+title: A LOOOSER'S ブログ
 comment: false
 ---
 <font size=5 color=#b6b196><strong>I lost myself into the night</font></strong>
